--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face{
+  font-family: 'graphik-bold', sans-serif;
+  src: url(../public/font/Graphik-Bold-Trial.otf);
+}
+@font-face {
+  font-family: 'graphik-regular', sans-serif;
+  src: url(../public/font/Graphik-Regular-Trial.otf);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  border: 1px solid red;
+  font-family: 'graphik-regular';
+  color: #00497c;
+  font-weight: bold;
 }
