add responsive design and end header + nav

--- a/src/pages/header/Header.css
+++ b/src/pages/header/Header.css
@@ -1,11 +1,47 @@
-.navbar-brand{
-    width: 30%;
-    height: 10%;
+.logo{
+    width: 12rem;
 }
 
-.logo{
-    width: 30%;
+.navigation{
+    display: flex;
+    flex-direction: column;
+    width: 80%;    
 }
-.form-control{
-    width: 16rem;
+
+.nav-link{
+    color: #0074c7;
+    font-size: 2rem;
+}
+
+.nav-link:hover{
+    color: #00497c;
+    border-bottom: 2px solid #0074c7 ;
+}
+
+.headBar{
+    justify-content: space-between;
+}
+
+button{
+    width: 6rem;
+    border: 2px solid #cd2c2e;
+    border-radius: 10px;
+    background-color: #384050;
+    color: #f1f8fc;
+}
+
+button:hover{
+    border: 2px solid #82b864;
+}
+
+nav{
+    background-color: #f1f8fc;
+}
+
+@media (min-width: 768px){
+    .navigation{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
 }
