--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,10 @@
 }
 
 *{
-  border: 1px solid red;
   font-family: 'graphik-regular';
   color: #00497c;
   font-weight: bold;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
