--- a/src/assets/style/artisan.css
+++ b/src/assets/style/artisan.css
@@ -6,6 +6,13 @@
 
 }
 
+.return{
+    margin-bottom: 1rem;
+    width: 10rem;
+    height: 3rem;
+    border: #0074c7 solid 0.1rem;
+}
+
 
 .about{
     margin-bottom: 2rem;
