--- a/src/assets/style/batiment.css
+++ b/src/assets/style/batiment.css
@@ -10,10 +10,11 @@
 }
 
 .batiment{
-    border: 0.4rem solid #00497c;
-    border-radius: 15px;
+    box-shadow: 0px 0px 60px #f1f8fc;
+    border: 1px solid #f1f8fc;
     margin: 2rem auto;
     background-color: white;
+    padding-bottom: 0.5rem;
 }
 
 @media (min-width: 768px){
